--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "urltools": "^0.2.1"
   },
   "devDependencies": {
-    "assetgraph": "^3.0.0-13",
+    "assetgraph": "assetgraph/assetgraph#dd02d01f7971ba9895636a2b8ecccbab8d5d801d",
     "coveralls": "^2.11.12",
     "eslint": "^3.2.0",
     "eslint-config-onelint": "^1.0.2",
