--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "urltools": "^0.2.1"
   },
   "devDependencies": {
-    "assetgraph": "assetgraph/assetgraph#2e69bb88c2ebc0ebc5e53abee900023f82f33238",
+    "assetgraph": "3.0.0-15",
     "coveralls": "^2.11.12",
     "eslint": "^3.2.0",
     "eslint-config-onelint": "^1.0.2",
