Fix author's email

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "maintainers": [
     {
       "name": "Andreas Lind",
-      "email": "andreas@one.com"
+      "email": "andreaslindpetersen@gmail.com"
     }
   ],
   "license": "BSD-3-Clause",
