--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
   "devDependencies": {
     "assetgraph": "^4.3.1",
     "coveralls": "^2.11.12",
-    "eslint": "^3.2.0",
+    "eslint": "3.19.0",
     "eslint-config-onelint": "^1.0.2",
+    "eslint-config-pretty-standard": "1.3.0",
+    "eslint-plugin-prettier": "2.6.0",
     "mocha": "^3.0.0",
     "nyc": "^8.3.0",
+    "prettier": "1.11.1",
     "systemjs-builder": "0.15.32",
     "temp": "0.8.3",
     "unexpected": "^10.8.1"
