--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "esanimate": "^1.1.0",
     "escodegen": "^1.8.0",
     "esmangle": "^1.0.1",
+    "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.2",
     "lodash": "^4.16.1",
     "memoizesync": "0.5.0",
