--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-prettier": "2.6.0",
     "mocha": "^3.0.0",
     "nyc": "^8.3.0",
-    "prettier": "1.11.1",
+    "prettier": "~1.16.1",
     "systemjs-builder": "0.15.32",
     "temp": "0.8.3",
     "unexpected": "^10.8.1"
