--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "eslint": "3.19.0",
     "eslint-config-onelint": "^1.0.2",
     "eslint-config-pretty-standard": "1.3.0",
-    "eslint-plugin-prettier": "2.6.0",
     "mocha": "^3.0.0",
     "nyc": "^8.3.0",
     "prettier": "~1.16.1",
@@ -59,7 +58,7 @@
     "assetgraph": "^4.0.0"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . && prettier --check '**/*.js'",
     "test": "mocha",
     "ci": "npm run lint && npm run coverage",
     "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- mocha && echo google-chrome coverage/lcov-report/index.html"
