Upgrade lint setup

--- a/package.json
+++ b/package.json
@@ -44,9 +44,14 @@
   "devDependencies": {
     "assetgraph": "^5.1.1",
     "coveralls": "^3.0.2",
-    "eslint": "3.19.0",
-    "eslint-config-onelint": "^1.0.2",
-    "eslint-config-pretty-standard": "1.3.0",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "mocha": "^3.0.0",
     "nyc": "^8.3.0",
     "prettier": "~1.16.1",
