--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,12 @@
 {
-  "extends": ["pretty-standard"]
+  "extends": ["standard", "prettier", "prettier/standard"],
+  "plugins": ["import", "mocha"],
+  "env": {
+    "mocha": true
+  },
+  "rules": {
+    "mocha/no-exclusive-tests": "error",
+    "mocha/no-nested-tests": "error",
+    "mocha/no-identical-title": "error"
+  }
 }
