Fix CI setup, add node.js 12, and don't run lint on the other ones

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "scripts": {
     "lint": "eslint . && prettier --check '**/*.js'",
     "test": "mocha",
-    "ci": "npm run lint && npm run coverage",
+    "test:ci": "npm run coverage",
     "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- mocha && echo google-chrome coverage/lcov-report/index.html"
   },
   "nyc": {
