--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 node_js:
-  - '8'
-  - '10'
+  - 8
+  - 10
+  - 12
   - 'node'
-script: 'npm run ci'
+
+matrix:
+  include:
+    - name: Lint
+      node_js: 12
+      script: npm run lint
+
+script: npm run test:ci
 after_success: '<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js'
