--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^7.0.0",
     "nyc": "^15.0.0",
+    "offline-github-changelog": "^2.0.0",
     "prettier": "~2.2.0",
     "systemjs-builder": "0.16.15",
     "temp": "0.9.4",
@@ -66,7 +67,8 @@
     "lint": "eslint . && prettier --check '**/*.{js,json,md}'",
     "test": "mocha",
     "test:ci": "npm run coverage",
-    "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- mocha && echo google-chrome coverage/lcov-report/index.html"
+    "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- mocha && echo google-chrome coverage/lcov-report/index.html",
+    "preversion": "offline-github-changelog --next=${npm_package_version} > CHANGELOG.md && git add CHANGELOG.md"
   },
   "nyc": {
     "include": [
