--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "unexpected": "^12.0.0"
   },
   "peerDependencies": {
-    "assetgraph": "^4.0.0"
+    "assetgraph": "^4.0.0 || ^5.0.0 || ^6.0.0"
   },
   "scripts": {
     "lint": "eslint . && prettier --check '**/*.{js,json,md}'",
