--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "estraverse": "^5.0.0",
     "estraverse-fb": "^1.3.2",
     "lodash": "^4.16.1",
-    "memoizesync": "1.1.1",
-    "optimist": "0.6.1",
+    "memoizesync": "^1.1.1",
+    "optimist": "^0.6.1",
     "plurals-cldr": "^1.0.2",
     "urltools": "^0.4.1"
   },
@@ -57,7 +57,7 @@
     "offline-github-changelog": "^2.0.0",
     "prettier": "~2.2.0",
     "systemjs-builder": "0.16.15",
-    "temp": "0.9.4",
+    "temp": "^0.9.4",
     "unexpected": "^12.0.0"
   },
   "peerDependencies": {
